Fix spacing issue in Declaration Files/Publishing (#2916)

--- a/packages/typescriptlang-org/src/templates/markdown.scss
+++ b/packages/typescriptlang-org/src/templates/markdown.scss
@@ -11,6 +11,7 @@
     flex-wrap: wrap;
     font-weight: 400;
     line-height: 1.3;
+    white-space-collapse: preserve;
 
     a {
       padding-right: 10px !important;
